After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705668 - Some labels does not update correctly when changing account's identifier
Some labels does not update correctly when changing account's identifier
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-08 12:54 UTC by Xavier Claessens
Modified: 2013-08-09 08:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EmpathyUserInfo: Update identifier/alias when they change on the account (2.94 KB, patch)
2013-08-08 12:55 UTC, Xavier Claessens
accepted-commit_now Details | Review
EmpathyAccountSettings: remember the new account display name when setting one. (1.04 KB, patch)
2013-08-08 15:04 UTC, Xavier Claessens
accepted-commit_now Details | Review
EmpathyAccountsDialog: Simplify the way we update account display name label in infobar (3.72 KB, patch)
2013-08-08 15:04 UTC, Xavier Claessens
accepted-commit_now Details | Review

Description Xavier Claessens 2013-08-08 12:54:51 UTC
empathy-accounts let the user change existing account's identifier. That's questionable feature, but the UI should update correctly if the user does that.

Currently the account's display name is not changed in the GtkInfoBar, and the identifier/alias is not changed in the account settings.
Comment 1 Xavier Claessens 2013-08-08 12:55:24 UTC
Created attachment 251155 [details] [review]
EmpathyUserInfo: Update identifier/alias when they change on the account

When the account goes online the account's nickname quickly changes from
the identifier to the actual nickname from the self VCard.

Identifier can change as well when editing account settings.
Comment 2 Xavier Claessens 2013-08-08 15:04:19 UTC
Created attachment 251188 [details] [review]
EmpathyAccountSettings: remember the new account display name when setting one.
Comment 3 Xavier Claessens 2013-08-08 15:04:22 UTC
Created attachment 251189 [details] [review]
EmpathyAccountsDialog: Simplify the way we update account display name label in infobar

accounts_dialog_update_status_infobar() is the function responsible
for doing all updates.
Comment 4 Xavier Claessens 2013-08-08 15:10:28 UTC
Note that the 3rd commit is not strictly needed to fix this bug. That's actually how I initially fixed the bug because it takes the display-name from the TpAccount instead of from EmpathyAccountSettings. But I think settings needs to know the new display name as well.
Comment 5 Simon McVittie 2013-08-08 15:15:29 UTC
Review of attachment 251155 [details] [review]:

Looks good to me
Comment 6 Guillaume Desmottes 2013-08-09 07:08:21 UTC
Review of attachment 251188 [details] [review]:

++
Comment 7 Guillaume Desmottes 2013-08-09 07:09:19 UTC
Review of attachment 251189 [details] [review]:

++
Comment 8 Xavier Claessens 2013-08-09 08:57:05 UTC
Thanks, pushed to master.