EmpathyUserInfo: Update identifier/alias when they change on the account

When the account goes online the account's nickname quickly changes from
the identifier to the actual nickname from the self VCard.

Identifier can change as well when editing account settings.

https://bugzilla.gnome.org/show_bug.cgi?id=705668